[package]
name = "sdr2hdr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Embed built-in ICC profiles into PNG and JPEG images."
license = "MIT"
repository = "https://github.com/guofei9987/sdr2hdr"
homepage = "https://github.com/guofei9987/sdr2hdr"
readme = "README.md"
keywords = ["icc", "png", "jpeg", "image", "hdr"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["assets/**", "example/**", "test/**"]

[[test]]
name = "embed_icc"
path = "test/embed_icc.rs"

[[example]]
name = "embed_icc"
path = "example/embed_icc.rs"

[dependencies]
crc32fast = "1.4"
flate2 = "1.0"
